<resources>
    <string name="app_name">BAAIT - version 1</string>
    <string name="tab_text_1">Numerical View</string>
    <string name="tab_text_2">Graph View</string>
    <string name="tab_text_3">Instructions</string>
    <string name="tab_text_4">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="write_usage_instructions_here">Write usage instructions here</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="instructions">Instructions:</string>
    <string name="write_instructions_here">Write Instructions Here</string>
    <string name="_99_3_f">99.3 F</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="settings">Settings:</string>
    <string name="turn_on_patch_and_attach_to_child_s_armpit_connect_with_patch_via_bluetooth_in_the_settings_application_of_your_device_temperature_readings_will_be_displayed_in_the_quot_numerical_view_quot_tab_of_the_application_visit_the_baait_isntruction_manual_for_troubleshooting_instructions">Turn on patch and attach to child\'s armpit. Connect with patch via Bluetooth in the settings application of your device. Temperature readings will be displayed in the \"Numerical View\" tab of the application. Visit the BAAIT isntruction manual for troubleshooting instructions.</string>
    <string name="add_a_new_patch">Add a New Patch</string>
    <string name="set_up_multiple_patches_to_monitor_multiple_children">Set up multiple patches to monitor multiple children:</string>
    <string name="_99_3">99.3</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="export_data_to_csv_file">Export data to .csv file:</string>
    <string name="enter_email_address">Enter email address:</string>
    <string name="email_email_com">email@email.com</string>
    <string name="send_csv">Send .csv</string>
    <string name="example_example_com">example@example.com</string>

</resources>
